--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ h4 {
 }
 
 .indifferent {
-  box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #E5e500;
+  box-shadow:  -1px 1px #E5e500, -2px 2px #E5e500, -3px 3px 
+E5e500, -4px 4px #E5e500, -5px 5px #E5e500;
   background-color: #dddd22;
 }
 
