--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,7 @@ h4 {
 }
 
 .indifferent {
-  box-shadow:  -1px 1px #D2B55B, -2px 2px #D2B55B, -3px 3px 
-E5e500, -4px 4px #E5e500, -5px 5px #E5e500;
+  box-shadow:  -1px 1px #D2B55B, -2px 2px #D2B55B, -3px 3px #D2B55B, -4px 4px #E5e500, -5px 5px #E5e500;
   background-color: #dddd22;
 }
 
