automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h4 {
 }
 
 .indifferent {
-  box-shadow:  -1px 1px #D2B55B, -2px 2px #D2B55B, -3px 3px #D2B55B, -4px 4px #E5e500, -5px 5px #D2B55B;
+  box-shadow:  -1px 1px #D2B55B, -2px 2px #D2B55B, -3px 3px #D2B55B, -4px 4px #D2B55B, -5px 5px #D2B55B;
   background-color: #dddd22;
 }
 
