--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-  background-image: url("images/white-wood.jpg");
+  
   width: 100%;
   height: 100%;
   font-family: Apple Chancery, cursive;
@@ -9,6 +9,8 @@ body, html {
 }
 
 body {
+  background-image: url("images/white-wood.jpg");
+}
 
 .container, h1 {
   width: 80%;
